remove "generated" make timestamp italic

--- a/pages/[id].module.css
+++ b/pages/[id].module.css
@@ -2,6 +2,11 @@ p.notGeneratedYet {
   font-style: italic;
 }
 
+p.generated {
+  font-style: italic;
+  font-size: smaller;
+}
+
 ol.children li {
   margin: 0.2rem;
 }
