--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -1,5 +1,10 @@
 select.view,
-input.q {
+input.q,
+input.searchButton {
   padding: 0.5rem;
   margin: 0.5rem;
+}
+
+form.search {
+  display: inline;
 }
