--- a/pages/faq.module.css
+++ b/pages/faq.module.css
@@ -1,3 +1,12 @@
 p.question {
   font-style: italic;
 }
+
+.window {
+  width: 100%;
+  text-align: center;
+}
+
+p.window img {
+  margin: 15rem;
+}
